[metadata]
name = proteasome

author = Ryan Conrad
author_email = conradry71@gmail.com
url = https://github.com/conradry/proteasome/
license = MIT License
description = Deep learning for proteins
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/conradry/proteasome/issues
    Documentation = https://github.com/conradry/proteasome#README.md
    Source Code = https://github.com/conradry/proteasome
    User Support = https://github.com/conradry/proteasome/issues

[options]
packages = find:
python_requires = >=3.9
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    pytorch
    cudatoolkit=10.1.243
    cudnn=7.6.0
    python=3.7.3
    numpy=1.16.4
    scikit-learn=0.21.2
    pandas=0.24.2
    tensorboard=2.0.0
    scipy=1.3.0
    numba=0.44.1
    tqdm=4.32.1
    numpy==1.13.3
    tensorflow-gpu==1.13.1
    openbabel==2.4.1
    scipy==1.2.2
    scikit-learn==0.20.3
    protobuf==3.6.1
    biopandas==0.4.1
    biopython==1.79
    networkx==2.8.7
    opt-einsum==3.3.0
    opt-einsum-fx==0.1.4
    packaging==21.3
    pandas==1.5.0
    pyaml==21.10.1
    scipy==1.9.1
    spyrmsd==0.5.2
    sympy==1.11.1
    threadpoolctl==3.1.0
    torch-cluster==1.6.0
    torch-geometric==2.1.0.post1
    torch-scatter==2.0.9
    torch-sparse==0.6.15
    torch-spline-conv==1.2.1
    rdkit-pypi==2022.3.5
    scikit-learn==1.1.2
    e3nn==0.5.0
    py3Dmol
    absl-py
    chex
    dm-haiku
    dm-tree
    immutabledict
    jax
    ml-collections
    optax
    joblib
    matplotlib
    transformers==4.11.3
    pytorch-lightning==1.6.4
    huggingface_hub
    seaborn
    mpl-scatter-density
    astropy
    gitpython
    biotite==0.34
    requests
    urllib3==1.26.14
    charset-normalizer==2.1.1
    wandb
    tensorboard
    pytorch_lightning
    #pyrosetta
    se3-transformer
    louvain>=0.6.1
    python-igraph>=0.8.3
    scanpy>=1.4.5.1
    absl-py==1.0.0
    deepspeed==0.5.9
    omegaconf
    einops
    typing-extensions==3.10.0.2
    openmm=7.5.1
    pdbfixer
    fairscale
    hydra-core
    hmmer==3.3.2
    hhsuite==3.3.0
    kalign2==2.04
    ray==2.0.0
    pyarrow
    colossalai==0.2.7
    modelcif==0.7
    dgllife
    subword-nmt
    pyfaidx
    tensorflow
    tensorflow_addons