[metadata]
name = prtm

author = Ryan Conrad
author_email = conradry71@gmail.com
url = https://github.com/conradry/prtm/
license = MIT License
description = Deep learning for proteins
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
project_urls =
    Bug Tracker = https://github.com/conradry/prtm/issues
    Documentation = https://github.com/conradry/prtm#README.md
    Source Code = https://github.com/conradry/prtm
    User Support = https://github.com/conradry/prtm/issues

[options]
packages = find:
python_requires = >=3.10
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    pip
